<resources>
    <string name="app_name">Near Play</string>
    <string name="queue">Queue</string>
    <string name="party">Party</string>
    <string name="search">Search</string>
    <string name="cd_queue">Music Queue</string>
    <string name="cd_party">Now Playing Nearby</string>
    <string name="cd_search">Media Search</string>
    <string name="night_mode">Night Mode</string>

    <string name="log_in_to_spotify">Log in to Spotify</string>

    <!-- The following strings enable Chrome CustomTabs login flow: -->
    <string name="com_spotify_sdk_redirect_scheme">nearplay</string>
    <string name="com_spotify_sdk_redirect_host">callback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="album_artwork">Album Artwork</string>
    <string name="shuffle">Shuffle</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="repeat_mode">Repeat Mode</string>
    <string name="search_spotify">Search Spotify</string>

</resources>
